--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,17 +6,321 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1039</width>
+    <height>636</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>METL</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
-  <widget class="QMenuBar" name="menubar"/>
+  <property name="windowIcon">
+   <iconset resource="iconos.qrc">
+    <normaloff>:/new/prefix1/iconos/fuego.png</normaloff>:/new/prefix1/iconos/fuego.png</iconset>
+  </property>
+  <widget class="QWidget" name="centralwidget">
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QStackedWidget" name="base">
+      <widget class="QWidget" name="page">
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="0">
+         <widget class="QTabWidget" name="area_Trabajo">
+          <property name="tabShape">
+           <enum>QTabWidget::Triangular</enum>
+          </property>
+          <property name="currentIndex">
+           <number>0</number>
+          </property>
+          <property name="tabsClosable">
+           <bool>true</bool>
+          </property>
+          <widget class="QWidget" name="tab">
+           <attribute name="icon">
+            <iconset resource="iconos.qrc">
+             <normaloff>:/new/prefix1/iconos/home.png</normaloff>:/new/prefix1/iconos/home.png</iconset>
+           </attribute>
+           <attribute name="title">
+            <string>Home</string>
+           </attribute>
+           <widget class="QLabel" name="label_2">
+            <property name="geometry">
+             <rect>
+              <x>190</x>
+              <y>180</y>
+              <width>63</width>
+              <height>20</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>Home</string>
+            </property>
+           </widget>
+          </widget>
+          <widget class="QWidget" name="tab_2">
+           <attribute name="icon">
+            <iconset resource="iconos.qrc">
+             <normaloff>:/new/prefix1/iconos/fluido.png</normaloff>:/new/prefix1/iconos/fluido.png</iconset>
+           </attribute>
+           <attribute name="title">
+            <string>Fluidos</string>
+           </attribute>
+           <widget class="QLabel" name="label_3">
+            <property name="geometry">
+             <rect>
+              <x>290</x>
+              <y>130</y>
+              <width>63</width>
+              <height>20</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>Fluidos</string>
+            </property>
+           </widget>
+          </widget>
+          <widget class="QWidget" name="tab_3">
+           <attribute name="icon">
+            <iconset resource="iconos.qrc">
+             <normaloff>:/new/prefix1/iconos/si.jpg</normaloff>:/new/prefix1/iconos/si.jpg</iconset>
+           </attribute>
+           <attribute name="title">
+            <string>Unidades</string>
+           </attribute>
+           <widget class="QLabel" name="label_4">
+            <property name="geometry">
+             <rect>
+              <x>220</x>
+              <y>210</y>
+              <width>63</width>
+              <height>20</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>unidades</string>
+            </property>
+           </widget>
+          </widget>
+          <widget class="QWidget" name="tab_4">
+           <attribute name="icon">
+            <iconset resource="iconos.qrc">
+             <normaloff>:/new/prefix1/iconos/tabla.png</normaloff>:/new/prefix1/iconos/tabla.png</iconset>
+           </attribute>
+           <attribute name="title">
+            <string>Tablas</string>
+           </attribute>
+           <widget class="QLabel" name="label_5">
+            <property name="geometry">
+             <rect>
+              <x>270</x>
+              <y>170</y>
+              <width>63</width>
+              <height>20</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>tablas</string>
+            </property>
+           </widget>
+          </widget>
+          <widget class="QWidget" name="tab_5">
+           <attribute name="icon">
+            <iconset resource="iconos.qrc">
+             <normaloff>:/new/prefix1/iconos/historial.png</normaloff>:/new/prefix1/iconos/historial.png</iconset>
+           </attribute>
+           <attribute name="title">
+            <string>Historial</string>
+           </attribute>
+           <widget class="QLabel" name="label">
+            <property name="geometry">
+             <rect>
+              <x>160</x>
+              <y>140</y>
+              <width>63</width>
+              <height>20</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>Historial</string>
+            </property>
+           </widget>
+          </widget>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="page_2"/>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QMenuBar" name="menubar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1039</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuArchivo">
+    <property name="title">
+     <string>Archivo</string>
+    </property>
+    <addaction name="actionAbrir"/>
+    <addaction name="actionNuevo"/>
+    <addaction name="actionGuardar"/>
+    <addaction name="actionGuardar_Como"/>
+    <addaction name="actionImprimir"/>
+    <addaction name="actionSalir"/>
+   </widget>
+   <widget class="QMenu" name="menuUnidades">
+    <property name="title">
+     <string>Unidades</string>
+    </property>
+    <addaction name="actionSistema_Internacional"/>
+    <addaction name="actionSistema_ingles"/>
+   </widget>
+   <widget class="QMenu" name="menuFluido">
+    <property name="title">
+     <string>Fluido</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menuTablas">
+    <property name="title">
+     <string>Tablas</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menuLaboratorio">
+    <property name="title">
+     <string>Laboratorio</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menuAyuda">
+    <property name="title">
+     <string>Ayuda</string>
+    </property>
+   </widget>
+   <addaction name="menuArchivo"/>
+   <addaction name="menuUnidades"/>
+   <addaction name="menuFluido"/>
+   <addaction name="menuTablas"/>
+   <addaction name="menuLaboratorio"/>
+   <addaction name="menuAyuda"/>
+  </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionAbrir"/>
+   <addaction name="actionNuevo"/>
+   <addaction name="actionGuardar"/>
+   <addaction name="separator"/>
+   <addaction name="actionSistema_de_Unidades"/>
+  </widget>
+  <widget class="QDockWidget" name="bl">
+   <attribute name="dockWidgetArea">
+    <number>1</number>
+   </attribute>
+   <widget class="QWidget" name="dockWidgetContents">
+    <layout class="QGridLayout" name="gridLayout_3">
+     <item row="0" column="0">
+      <widget class="QTreeWidget" name="arbol">
+       <attribute name="headerVisible">
+        <bool>false</bool>
+       </attribute>
+       <column>
+        <property name="text">
+         <string notr="true">1</string>
+        </property>
+       </column>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
+  <action name="actionAbrir">
+   <property name="icon">
+    <iconset resource="iconos.qrc">
+     <normaloff>:/new/prefix1/iconos/abrir-documento.png</normaloff>:/new/prefix1/iconos/abrir-documento.png</iconset>
+   </property>
+   <property name="text">
+    <string>Abrir</string>
+   </property>
+  </action>
+  <action name="actionNuevo">
+   <property name="icon">
+    <iconset resource="iconos.qrc">
+     <normaloff>:/new/prefix1/iconos/nuevo-mensaje.png</normaloff>:/new/prefix1/iconos/nuevo-mensaje.png</iconset>
+   </property>
+   <property name="text">
+    <string>Nuevo</string>
+   </property>
+  </action>
+  <action name="actionGuardar">
+   <property name="icon">
+    <iconset resource="iconos.qrc">
+     <normaloff>:/new/prefix1/iconos/guardar-el-archivo.png</normaloff>:/new/prefix1/iconos/guardar-el-archivo.png</iconset>
+   </property>
+   <property name="text">
+    <string>Guardar</string>
+   </property>
+  </action>
+  <action name="actionImprimir">
+   <property name="icon">
+    <iconset resource="iconos.qrc">
+     <normaloff>:/new/prefix1/iconos/impresora.png</normaloff>:/new/prefix1/iconos/impresora.png</iconset>
+   </property>
+   <property name="text">
+    <string>Imprimir</string>
+   </property>
+  </action>
+  <action name="actionSalir">
+   <property name="icon">
+    <iconset resource="iconos.qrc">
+     <normaloff>:/new/prefix1/iconos/boton-cerrar.png</normaloff>:/new/prefix1/iconos/boton-cerrar.png</iconset>
+   </property>
+   <property name="text">
+    <string>Salir</string>
+   </property>
+  </action>
+  <action name="actionSistema_Internacional">
+   <property name="text">
+    <string>Sistema Internacional</string>
+   </property>
+  </action>
+  <action name="actionSistema_ingles">
+   <property name="text">
+    <string>Sistema ingles</string>
+   </property>
+  </action>
+  <action name="actionGuardar_Como">
+   <property name="icon">
+    <iconset resource="iconos.qrc">
+     <normaloff>:/new/prefix1/iconos/guardar-el-archivo.png</normaloff>:/new/prefix1/iconos/guardar-el-archivo.png</iconset>
+   </property>
+   <property name="text">
+    <string>Guardar Como</string>
+   </property>
+  </action>
+  <action name="actionSistema_de_Unidades">
+   <property name="icon">
+    <iconset resource="iconos.qrc">
+     <normaloff>:/new/prefix1/iconos/si.jpg</normaloff>:/new/prefix1/iconos/si.jpg</iconset>
+   </property>
+   <property name="text">
+    <string>Sistema de Unidades</string>
+   </property>
+  </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="iconos.qrc"/>
+ </resources>
  <connections/>
 </ui>
